# sentivo

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: targets.yaml
scripts/: run_all.sh
src/sentivo/: __init__.py  main.py
src/sentivo/consumers/: __init__.py  aggregator_consumer.py  base.py  logging_sink.py  sentiment_consumer.py  signal_consumer.py
src/sentivo/core/: __init__.py  config.py  kafka_client.py  logging_config.py
src/sentivo/data_collectors/: __init__.py  base.py  market_data_collector.py  models.py  news_collector.py  reddit_collector.py  twitter_collector.py
src/sentivo/producers/: __init__.py  base.py  market_data_producer.py  news_producer.py  reddit_producer.py
src/sentivo/schemas/: __init__.py  kafka_models.py  producer_models.py
src/sentivo/sentiment_analysis/: base.py  finbert_analyzer.py  onnx_finbert.py  text_preprocessor.py  texts.py
